<resources>
    <string name="app_name">GastoViagem</string>

    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilômetros</string>

    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>

    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="gasto_total">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="valor_total">R$ 0</string>
    <string name="calcular">Calcular</string>

    <string name="validation_fill_all_fields">Preencha os campos!</string>
</resources>